# suml-lab4-streamlit

./: .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
