[project]
name = "lab4"
version = "0.1.0"
description = "SUML lab 4 environment managed with uv"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi",
    "matplotlib",
    "mlflow",
    "nbformat",
    "numpy",
    "onnxruntime",
    "pandas",
    "plotly",
    "scikit-learn",
    "seaborn",
    "skl2onnx",
    "streamlit",
    "torch",
    "torchaudio",
    "torchvision",
    "transformers",
    "uvicorn",
]
