[project]
name = "lab4"
version = "0.1.0"
description = "Streamlit text analysis app for SUML lab 4"
requires-python = ">=3.10,<3.13"
dependencies = [
    "sacremoses==0.1.1",
    "sentencepiece==0.2.1",
    "streamlit",
    "torch",
    "transformers",
]

[project.scripts]
lab4 = "streamlit_app:run"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["streamlit_app"]
